adding stock and crypto